dc/s2n-quic-dc/src/snapshots/stream__reader__tests__server_advertises_initial_window_against_drained_pool.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG distributor created
0:00:01.000000000 [main] DEBUG Reader dropping binding_id=1 status=Open final_size=None consumed_len=12 total_received_len=12 is_writing_complete=false is_reading_complete=false
0:00:01.000000000 [main] DEBUG Sent QueueReset binding_id=1 error_code=4 reset_target=Control
0:00:01.000000000 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING binding_id=1
0:00:01.000000000 [main] DEBUG distributor dropping; closing pool
