dc/s2n-quic-dc/src/snapshots/stream__reader__tests__server_drop_during_pending_validation_sends_stop_sending.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG Reader dropping stream_id=1 status=PendingValidation final_size=None consumed_len=0 total_received_len=0 is_writing_complete=false is_reading_complete=false
0:00:00.000000000 [main] DEBUG Sent FlowReset stream_id=1 error_code=6 reset_target=Control
0:00:00.000000000 [main] DEBUG Reader dropped before FIN received - sent STOP_SENDING stream_id=1
